# Ai-Anime

./: .commitlintrc.json  .env.example  .eslintrc.js  .gitignore  .lintstagedrc.json  .markdownlint.json  AGENTS.md  ARCHITECTURE.md  Makefile  PROJECT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: architecture_change.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  db-check.yml  docs-check.yml  pr-check.yml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/core/: config.py  db.py  logger.py
apps/api/app/models/: __init__.py  billing.py  content.py  users.py
apps/api/app/repositories/: __init__.py  comment.py  post.py  user.py
apps/api/app/routers/: __init__.py  ai.py  auth.py  comments.py  posts.py  subscriptions.py  tags.py  uploads.py  users.py
apps/api/app/schemas/: __init__.py  comments.py  common.py  posts.py  users.py
apps/api/app/services/: __init__.py  comment.py  moderation.py  post.py  user.py
apps/api/app/utils/: __init__.py  auth.py
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/worker/: Dockerfile  pyproject.toml
apps/worker/worker/: main.py
apps/worker/worker/tasks/: asset_processing.py  build_embeddings.py  cleanup_temp_uploads.py  generate_thumbnail.py  refresh_search_docs.py  run_content_safety.py  sync_subscription_state.py
docs/: PLANS.md  RELIABILITY.md  ROADMAP.md  SECURITY.md
docs/adr/: ADR-001-monorepo.md  ADR-002-nextjs-fastapi-split.md  ADR-003-postgres-search-strategy.md  ADR-004-stripe-entitlements.md
docs/api/: api-index.md
docs/db/: erd-v1.md  migration-order.md  (+1 more)
(+90 files in other folders)
